--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "react-learn",
+  "name": "react-hands-on",
+  "homepage": "https://april-azure.github.io/react-assignment-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "bootstrap": "^4.0.0",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-popper": "^0.9.2",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "gh-pages": "^1.1.0",
+    "ws": "3.3.2"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "bootstrap": "^4.0.0",
-    "react-popper": "^0.9.2",
-    "reactstrap": "^5.0.0"
-  }
+  ]
 }
