--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hands-on",
-  "homepage": "https://april-azure.github.io/react-assignment-1",
+  "homepage": "https://april-azure.github.io/react-assignment-1/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +10,12 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-popper": "^0.9.2",
+    "react-redux": "^5.1.1",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
-    "reactstrap": "^5.0.0"
+    "react-scripts": "^1.1.4",
+    "reactstrap": "^5.0.0",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -25,11 +28,5 @@
   "devDependencies": {
     "gh-pages": "^1.1.0",
     "ws": "3.3.2"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
