--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "react-hands-on",
-  "homepage": "https://april-azure.github.io/react-assignment-1/",
+  "name": "coursera-full-stack-web-dev-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-animation-components": "^3.0.0",
+    "react-dom": "^16.5.2",
     "react-popper": "^0.9.2",
-    "react-redux": "^5.1.1",
-    "react-redux-form": "^1.16.14",
+    "react-redux": "^5.1.0",
+    "react-redux-form": "^1.16.10",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "2.0.5",
+    "react-transition-group": "^2.5.0",
     "reactstrap": "^5.0.0",
-    "redux": "^3.7.2"
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "gh-pages": "^1.1.0",
-    "ws": "3.3.2"
-  }
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
